--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,13 @@ __pycache__/
 # C extensions
 *.so
 
+# Ignorar los excel
+*.xls
+*.xlsx
+
+# Ignorar la carpeta de imagenes "ColorMask-FloodNetv1.0/"
+./ColorMasks-FloodNetv1.0
+
 # Distribution / packaging
 .Python
 build/
